# ChangeLog for dev-libs/libpeas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpeas/ChangeLog,v 1.34 2014/09/04 10:04:39 pacho Exp $

*libpeas-1.10.1 (04 Sep 2014)

  04 Sep 2014; Pacho Ramos <pacho@gentoo.org> +libpeas-1.10.1.ebuild,
  -libpeas-1.9.0.ebuild, metadata.xml:
  Version bump, use new python-config (#488392 by mgorny), drop old.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libpeas-1.10.0.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libpeas-1.10.0.ebuild:
  Stable for amd64, wrt bug #512912

*libpeas-1.10.0 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +libpeas-1.10.0.ebuild:
  Version bump for Gnome 3.12.

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libpeas-1.8.1.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> libpeas-1.9.0.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> libpeas-1.9.0.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> libpeas-1.9.0.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> libpeas-1.9.0.ebuild:
  arch stable, bug 888

  02 Feb 2014; Pacho Ramos <pacho@gentoo.org> libpeas-1.9.0.ebuild:
  spidermonkey was rekeyworded

*libpeas-1.9.0 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +libpeas-1.9.0.ebuild,
  -libpeas-1.6.2-r1.ebuild:
  Version bump for Gnome 3.10, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> libpeas-1.8.1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> libpeas-1.8.1.ebuild:
  amd64 stable, bug #478252

  27 Aug 2013; Alexis Ballier <aballier@gentoo.org> libpeas-1.8.1.ebuild:
  keyword ~amd64-fbsd

  25 Jul 2013; Gilles Dartiguelongue <eva@gentoo.org> libpeas-1.8.1.ebuild:
  Add missing dependencies and required use.

  22 Jul 2013; Pacho Ramos <pacho@gentoo.org> -libpeas-1.8.0.ebuild,