@@ -4,13 +4,23 @@ Hash: SHA256
 AUX seed-3.2.0-gio-libs.patch 1127 SHA256 08ab9295344055a36dbae31d5ffa5b1d09645d89015bffaae818d448487718fd SHA512 b35bf05bd3e294ee61f972b1052f0e15b6ed71128701cf885a1e44a7c864089b9164caa930ec8f522286c0bd5aea097913b2d38ea36496cc36a58f04dabdddc9 WHIRLPOOL 2779c386740b20222cb53dcec9025bfce44d9681360c80969e4e8cd2cb0f6f1f41280586185543f8747808e4be077c84627becec3466e81b63e60bead615b93e
 AUX seed-fix-gnome-js-common-circular-dep.patch 987 SHA256 2c0afc96cb483b2628576a7136ab455b6e110873187c348d756fefda8b847bdf SHA512 fc488c000c9e2fb8ac96f2a7b35ba99b05d9ba919969d910d787aff543206f78067899d46b9fea80063d009ece769efc4edb0ca25ed8feac088776654e9db369 WHIRLPOOL 1b6b61bb3066cd11cd73d4f5292e39be222350ede361408ee4d63a091409158a24fd9057aa07623657bf98a07410ad71d68e734fecc51b629c9275d826ceb40b
 DIST seed-3.8.1.tar.xz 692288 SHA256 80cb4db7fa6f6cf8d3e255fc45a81657388d458bc8bf23e4089e35f69eeaac32 SHA512 910c0b9e02665db8d99725f6bac8cbda753574c95b791fb205098fa00a3c61f36de36411cbf4d7660c8a2e63a1c63b1e2aa798d6be90997a35a97b2a7e37c42e WHIRLPOOL 4db1f0774567e39801b6ac5cdd0c6bae9ccd1be27f2a287ee98ee7fae77ccb3487bb8925ab3ff0b2ae1ce4951c91f92c52247ee1a368d583053f1140edb7736e
-EBUILD seed-3.8.1.ebuild 2172 SHA256 6f1e39059ac731f8ba6db7bf347ae95cee8d100e98c4ee11377629d11e1e91c0 SHA512 715175c118571350a086b3095ef166d5f43b0d1697441a91073c41e8542a43481493bd0a524808c4b83f1a89a9c3b0f330d76de6d990fe8e24b93280595c458e WHIRLPOOL b7b270c9ab41b7fc57d375bea6679a72026886d7f083c6a5416ea6cceeab00d6043818596bb27e2486104ae043d81be877d0dd026c873d1cf9b02b8ee330eac3
-MISC ChangeLog 2953 SHA256 a2788d202cbd57099291a68b99b38905655305af519bb30c9402145c37254344 SHA512 2ced0d91dcb4ef999481acffc968cab93a01ea715422639593c79ce5efe37b7258e287a81022059cb5968d4abe74b9fae01183a05087be1bf7f782ad1d4ef592 WHIRLPOOL 2ab000317cb369aa29d2dde95d185b7a2f071132c33300498749aadd87ef4231ad9b39d648c0ce8b4b60a707acd44e57997f0b0eba69af74c497339239245d98
+EBUILD seed-3.8.1.ebuild 2169 SHA256 f484fd071ff9b2795e4958c20d17d06f6a25bf8df9fff00aa8c215f92d38000b SHA512 5b4f8e646b69f427885f6772a83032c16d6fd7d0640fca3ca18da534631c928aa2e4299abfeddccc5c99a845824d926277272c704b5602e95784a7aa6ec9b4b6 WHIRLPOOL 51fa0bed6589fa4ac740bf1ba3b7db0064bfaf7b7f59f93d623c0f6f7adcf4e4dc521eec71b89ac06fc16f363d0dc37ed1ee8ce8ace7345ec8ffe68e02de0ef7
+MISC ChangeLog 3054 SHA256 a521da6960e2ae39db6715bfea72fe43f4eaac111191e23bbeab6f8038a26c3f SHA512 0c541e485b176b3d683707b5c5ede84a8e93a9debea61e5b473d9f39b2987c0437f855871da42c02ba1c96506d8da62667fe7059b4e4dfe2cddd6fe9b9a3dca0 WHIRLPOOL 304cc2ddca0e73bc45def3126557304743a900b0b0951fe41a78a1d1fe384989a7e84db96b9c41c520ddb605aab735c3fc68c90d584244b85993056676715151
 MISC metadata.xml 281 SHA256 fbcb7815bff5652f40a71e7c3b0038e54a5c2d619313c28015413f54eece0554 SHA512 cd6414d84cfeeb6a8620bfa9c05fb933a8a1d9d1cc87735f115e3af961d99b25cddfe8add08631700f1f57d441dd2e20879556df9db438dd61af7450ff5d7838 WHIRLPOOL 5a281de745062306cadefdcf26342a7aad7128db245e365130c3e0312c916837c21f525adc8a318cd5ecbf875e87ddaf58c4672810529fcfb5ce578b0fa4d43f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNbWYIACgkQCaWpQKGI+9RAAACdEx9/Z2dUcwGdGOal9K6+PWxP
-ox0An3r8P6GPqUCcCIPyYflFSM+cS/VR
-=iJSk
+iQIcBAEBCAAGBQJUMTS5AAoJELp701BxlEWfcKYQAKi8xW1Uq39vxbEhlYjbNum+
+1kkM6IvdB0VVSpnJGCHz2ch3MBFgIKjZUgzZm8s5NIbiDnzlxdWDnz++Uw+Q6UwW
+H9cPUjzL4sRdutK8l0H3GNIs3Pa1jeywPxzieXkXEFKvnlHVr68NqFy8FuzZKJdX
+jCiXdaoGXYa8+ztFdy8UBspH4lQ6G51tTQnc4webkHd7HDBC7vRYlM9zcHCG+G5V
+zFYLJD72WfNu+yGJ8ShhHIzfJidAdZa2Yi75KvQG0MqkSz3cw/H83JVyZDMFGwFl
+UpSPcag8qS+JhXtBHzKyhVAhAN9YtTP/MIK6kvwXT0Y+4082E+sz63HtZ/RvczlK
+O9SfMuP7byvFLtTpWrni9vR33vV/iECv8B583ISJ8gCqZJw++fZ93XpnXFvsx4ga
+WQSgKdAaqyDxofG24l1Fn/KGyPctfhI/t4S/PiYByPO0cqqRuZ/kpqdnGh7FaZrM
+IWoD79OK4CK+MZz5fHa2kJXV5aMdv3HFs6U/i/HHz6GICTQwkua/1tb7roFXyONi
+9tB+MO7lXeh8Xhs0vo5SZz75MAnR7+Ud/XzpSgcLdfGxoS0q5mmQF+XAOpTqF4tz
+FrghXRLqvTW9WRoKWIPGyjTWhTfEoNYl6iuN0tKA6EaT77aQVuUnnWuy0GL4DIZb
+C4y3wptX4Xj2TTsJ5dUf
+=k+OY
 -----END PGP SIGNATURE-----
