@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libpeas
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpeas/ChangeLog,v 1.34 2014/09/04 10:04:39 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpeas/ChangeLog,v 1.35 2014/10/05 12:08:20 ago Exp $
+
+  05 Oct 2014; Agostino Sarubbo <ago@gentoo.org> libpeas-1.10.0.ebuild:
+  Stable for ppc, wrt bug #513396
 
 *libpeas-1.10.1 (04 Sep 2014)
 
